--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,15 +23,14 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.culture_connect"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        applicationId "com.example.culture_connect"
+        minSdkVersion 23   // ✅ set manually, don’t use flutter.minSdkVersion
+        targetSdkVersion 34 // or whatever latest you have in compileSdkVersion
+        versionCode 1
+        versionName "1.0"
+        multiDexEnabled true
     }
+
 
     buildTypes {
         release {
@@ -46,4 +45,3 @@ flutter {
     source = "../.."
 }
 
-apply plugin: 'com.google.gms.google-services'
