--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,12 @@ dependencies:
   google_sign_in: ^6.2.1
   provider: ^6.1.2
   smooth_page_indicator: ^1.0.0+2
-  cloud_firestore: ^5.4.0
   flutter_map: ^7.0.0
   latlong2: ^0.9.0
   url_launcher: ^6.3.1
-  http: ^1.1.0
+  http: ^1.2.0
   carousel_slider: ^5.0.0
+  google_generative_ai: ^0.2.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
